--- a/apps.html
+++ b/apps.html
@@ -23,18 +23,21 @@
         <div class="inner">
           <h3 class="masthead-brand">computerMatt</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="./index.html">Home</a>
-            <a class="nav-link" href="./apps.html">Apps</a>
+            <a class="nav-link" href="./index.html">Home</a>
+            <a class="nav-link active" href="./apps.html">Apps</a>
             <a class="nav-link" href="./contact.html">Contact</a>
           </nav>
         </div>
       </header>
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Projects that are people first.</h1>
-        <p class="lead">If a solution doesn't solve a problem, it's not worth having.</p>
+        <h1 class="cover-heading">Projects that are pro-people.</h1>
+        <p class="lead">Test that has a lot of text to be even wider and wider</p>
         <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+          <div><a href="./PourDecisions" class="btn btn-lg btn-secondary">Pour Decisions</a></div>
+		</p>
+        <p class="lead">
+          <div><a href="./TrolleyStop" class="btn btn-lg btn-secondary">Trolley Stop</a></div>
         </p>
       </main>
 
