--- a/contact.html
+++ b/contact.html
@@ -23,16 +23,16 @@
         <div class="inner">
           <h3 class="masthead-brand">computerMatt</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="./index.html">Home</a>
+            <a class="nav-link" href="./index.html">Home</a>
             <a class="nav-link" href="./apps.html">Apps</a>
-            <a class="nav-link" href="./contact.html">Contact</a>
+            <a class="nav-link active" href="./contact.html">Contact</a>
           </nav>
         </div>
       </header>
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Projects that are people first.</h1>
-        <p class="lead">If a solution doesn't solve a problem, it's not worth having.</p>
+        <h1 class="cover-heading">Cover your page.</h1>
+        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
         <p class="lead">
           <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
         </p>
